Add comprehensive Java class file analyzer and G1 GC parameter documentation
- Create ClassFileAnalyzer.java with complete .class file structure analysis
- Explain class file origin, usage, principles, and internal structure
- Include bytecode instruction examples and analysis tools
- Add detailed G1 GC JVM parameters documentation with tuning examples
- Cover magic number, version info, constant pool, and method bytecode simulation